--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NODE_ENV="homolog"
-AWS_ACCESS_KEY="credentials('aws-ecr-access')"
-AWS_SECRET_ACCESS_KEY="credentials('aws-ecr-access')"
+AWS_ACCESS_KEY=""
+AWS_SECRET_ACCESS_KEY=""
 AWS_SDK_LOAD_CONFIG="0"
 BUCKET_NAME="digitalhouse-devopers-homolog"
 REGION="us-east-1" 
