--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NODE_ENV="homolog"
 AWS_ACCESS_KEY=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_SDK_LOAD_CONFIG="0"
-BUCKET_NAME="digitalhouse-devopers-homolog"
+BUCKET_NAME="dh-pi-renadevops-dev"
 REGION="us-east-1" 
 PERMISSION=""
 ACCEPTED_FILE_FORMATS_ARRAY=""
